# usonic

./: .gitmodules  CMakeLists.txt
cmake/: FindMCU.cmake
drivers/: CMakeLists.txt
drivers/Configs/: stm32l5xx_hal_conf.h
src/: CMakeLists.txt  STM32L562VETX_FLASH.ld  filter.h  main.c  main.h  stm32l5xx_hal_msp.c  stm32l5xx_it.c  stm32l5xx_it.h
src/display/: FreeSans12pt7b.h  FreeSans9pt7b.h  FreeSansBold24pt7b.h  FreeSansBoldOblique24pt7b.h  JPEGENC.cpp  JPEGENC.h  gifenc.c  jpeg.c  lcd_mem.c  lcd_mem.h  utils.c  utils.h
src/fatfs/: app_fatfs.c  fatfs_platform.c  fatfs_platform.h  ffconf.h  sd_diskio.c  sd_diskio.h
src/periph/: adc.c  aes.c  aes.h  dac.c  dma.c  gpio.c  i2c.c  octospi.c  rtc.c  sdmmc.c  spi.c  tim.c  tim.h  usart.c
src/sensors/: BME280.c  BME280.h
src/wifi/: demo_config.h  dhcp_server.c  ethernetif.c  lwip_app.c  lwip_app.h  sl_wfx_host.c  sl_wfx_host_pin.h  sl_wfx_host_spi.c
src/wifi/LwIP/src/apps/http/: http_client.c
src/wifi/LwIP/src/include/lwip/: opt.h
src/wifi/wfx-fullmac-driver/: sl_wfx.c
src/wifi/wfx-fullmac-driver/firmware/: sl_wfx_wf200_C0.h
